--- a/package.json
+++ b/package.json
@@ -1,54 +1,25 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@esri/arcgis-rest-portal": "^4.4.0",
-    "@esri/react-arcgis": "^5.2.0",
-    "@mui/icons-material": "^5.14.13",
-    "@mui/joy": "^5.0.0-beta.10",
-    "@mui/material": "^5.14.13",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.5.1",
-    "chart.js": "^4.4.0",
-    "css-loader": "^6.8.1",
-    "esri-loader": "^2.16.0",
-    "postcss-loader": "^7.3.3",
-    "react": "^18.2.0",
-    "react-cookie": "^6.1.1",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
-    "source-map-loader": "^4.0.1",
-    "style-loader": "^3.3.3",
-    "web-vitals": "^2.1.4"
-  },
+  "name": "water-meter",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "esri-loader": "^3.7.0",
+    "express": "^4.18.2",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.1",
+    "mongoose": "^7.6.1",
+    "react-to-print": "^2.14.15"
   }
 }
